Archive2/a4/e95605c78fa12d/output
+ g++-4.8 -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In function ‘char* cpy_input()’:
main.cpp:76:45: warning: suggest parentheses around assignment used as truth value [-Wparentheses]
  while (count = read(0, ret + tot, len - tot))
                                             ^
main.cpp: In function ‘int main()’:
main.cpp:240:23: error: ‘ar’ was not declared in this scope
   if (ft_strcmp(input,ar x, meta.y, &print03)) && (ok += 1))
                       ^
main.cpp:240:51: error: expected identifier before ‘(’ token
   if (ft_strcmp(input,ar x, meta.y, &print03)) && (ok += 1))
                                                   ^
main.cpp:240:51: warning: taking the address of a label is non-standard [-Wpedantic]
main.cpp:240:51: error: expected ‘;’ before ‘(’ token
main.cpp:227:8: warning: unused variable ‘our_str’ [-Wunused-variable]
  char *our_str;
        ^
main.cpp: In function ‘void ft_putchar(char)’:
main.cpp:191:17: warning: ignoring return value of ‘ssize_t write(int, const void*, size_t)’, declared with attribute warn_unused_result [-Wunused-result]
  write(1, &c, 1);
                 ^
main.cpp: In function ‘void display(int, char, int, int)’:
main.cpp:208:22: warning: ignoring return value of ‘ssize_t write(int, const void*, size_t)’, declared with attribute warn_unused_result [-Wunused-result]
   write(1, " || ", 4);
                      ^
main.cpp:209:25: warning: ignoring return value of ‘ssize_t write(int, const void*, size_t)’, declared with attribute warn_unused_result [-Wunused-result]
  write(1, "[colle-0", 8);
                         ^
main.cpp:210:21: warning: ignoring return value of ‘ssize_t write(int, const void*, size_t)’, declared with attribute warn_unused_result [-Wunused-result]
  write(1, &which, 1);
                     ^
main.cpp:211:20: warning: ignoring return value of ‘ssize_t write(int, const void*, size_t)’, declared with attribute warn_unused_result [-Wunused-result]
  write(1, "] [", 3);
                    ^
main.cpp:213:20: warning: ignoring return value of ‘ssize_t write(int, const void*, size_t)’, declared with attribute warn_unused_result [-Wunused-result]
  write(1, "] [", 3);
                    ^
main.cpp:215:18: warning: ignoring return value of ‘ssize_t write(int, const void*, size_t)’, declared with attribute warn_unused_result [-Wunused-result]
  write(1, "]", 1);
                  ^
main.cpp: In function ‘void display_error()’:
main.cpp:220:23: warning: ignoring return value of ‘ssize_t write(int, const void*, size_t)’, declared with attribute warn_unused_result [-Wunused-result]
  write(1, "aucune", 6);
                       ^
main.cpp: In function ‘int main()’:
main.cpp:247:19: warning: ignoring return value of ‘ssize_t write(int, const void*, size_t)’, declared with attribute warn_unused_result [-Wunused-result]
  write(1, "\n", 1);
                   ^
